<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="individual_edit_assessment_affectedaddress__street_field"
        android:summary="%s"
        android:title="@string/affectedaddress__street"></EditTextPreference>
    <EditTextPreference
        android:key="individual_edit_assessment_affectedaddress__city_field"
        android:summary="%s"
        android:title="@string/affectedaddress__city"></EditTextPreference>
    <ListPreference
        android:key="individual_edit_assessment_affectedaddress__stateid_field"
        android:title="@string/affectedaddress__state"
        android:summary="%s"
        android:entries="@array/empty"
        android:entryValues="@array/empty"></ListPreference>
    <EditTextPreference
        android:key="individual_edit_assessment_affectedaddress__zip_field"
        android:summary="%s"
        android:title="@string/affectedaddress__zip"></EditTextPreference>
</PreferenceScreen>