<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TextNormalTheme"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="100dip"
            android:layout_marginBottom="60dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_merci_text"
            style="@style/TextNormalTheme"
            android:layout_marginBottom="60dip"/>

        <TextView
            style="@style/TextNormalTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/developer" />
    </LinearLayout>
</ScrollView>